[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistapi"
version = "0.57.2"
authors = [{ name = "Thomas Munzer", email = "tmunzer@juniper.net" }]
description = "Python package to simplify the Mist System APIs usage"
keywords = ["Mist", "Juniper", "API"]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "Topic :: System :: Networking",
  "Development Status :: 4 - Beta",
]
dependencies = [
  "python-dotenv>=1.1.0",
  "requests>=2.32.3",
  "tabulate>=0.9.0",
  "deprecation>=2.1.0",
  "hvac>=2.3.0",
]

[project.urls]
"Source" = "https://github.com/tmunzer/mistapi_python"
"Bug Tracker" = "https://github.com/tmunzer/mistapi_python/issues"

# UV-specific configuration
[tool.uv]
dev-dependencies = [
  # Testing dependencies
  "pytest>=8.4.0",
  "pytest-cov>=6.1.1",
  "responses>=0.25.7",
  "factory-boy>=3.3.3",
  # "pytest-mock>=3.14.1",
  # "pytest-httpx>=0.35.0",
  # "faker>=37.3.0",
  # "httpx>=0.28.1",

  # Code quality
  "ruff>=0.11.13",

  # Development dependencies
  "twine>=6.1.0",
  "build>=1.2.2.post1",
  "pyyaml>=6.0.2",
  "urllib3>=2.4.0",
]

# Hatchling configuration (replaces setup.cfg)
[tool.hatchling.build.targets.wheel]
packages = ["src/mistapi"]

[tool.hatchling.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/pyproject.toml"]

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = ["unit: Unit tests", "integration: Integration tests"]

# Exclude API files that happen to start with "test"
norecursedirs = ["src/mistapi/api/*/utils"]
collect_ignore = [
  "src/mistapi/api/v1/utils/test_smsglobal.py",
  "src/mistapi/api/v1/utils/test_telstra.py",
  "src/mistapi/api/v1/utils/test_twilio.py",
]

addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--disable-warnings",
  "--cov=src/mistapi",
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov-fail-under=30",
  "--cov-config=pyproject.toml",
]

[tool.coverage.run]
source = ["src/mistapi"]
omit = [
  "src/mistapi/api/v1/*",
  "src/mistapi/cli.py",
  "*/test_*.py",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
]

# Ruff configuration - exclude autogenerated API code
[tool.ruff]
#exclude = ["src/mistapi/api/**/*.py"]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests"]


[tool.pylic]
safe_licenses = [
  "Apache-2.0",
  "MIT License",
  "MIT",
  "PSF-2.0",
  "BSD License",
  "BSD-2-Clause",
  "BSD-3-Clause",
  "ISC License (ISCL)",
]
