[metadata]
name = mistcli
version = 1.0.0
author = Thomas Munzer
author_email = tmunzer@juniper.net
description = Python package to simplify the Mist System APIs usage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/tmunzer
project_urls =
    Docs =  https://www.github.com/tmunzer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: System Administrators
    Topic :: System :: Networking
    Development Status :: 4 - Beta

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src