[metadata]
name = mistapi
version = 1.0.0
author = Thomas Munzer
author_email = tmunzer@juniper.net
description = Python package to simplify the Mist System APIs usage
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: System Administrators
    Topic :: System :: Networking
    Development Status :: 4 - Beta

[project.urls]
"Homepage" = " https://github.com/tmunzer/mistapi_python"
"Docs" =  "https://github.com/tmunzer/mistapi_python"
"Bug Tracker" = "https://github.com/tmunzer/mistapi_python/issues"

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src